--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fast-deep-equal": "^3.1.3",
     "fret": "file:../Code/hypervigile"
   }
 }
